--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -404,3 +404,28 @@ input[type="submit"],
         margin-bottom: 20px;
     }
 }
+
+
+/* Página de entradas */
+.mensaje {
+    padding: 10px;
+    text-align: center;
+    font-weight: bold;
+    margin: 10px auto;
+    width: 50%;
+    border-radius: 5px;
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
+}
+
+.mensaje-exito {
+    background-color: #d4edda; /* Verde claro */
+    color: #155724; /* Verde oscuro */
+    border: 1px solid #c3e6cb;
+}
+
+.mensaje-error {
+    background-color: #f8d7da; /* Rojo claro */
+    color: #721c24; /* Rojo oscuro */
+    border: 1px solid #f5c6cb;
+}
