--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ body {
 }
 
 #menu ul li a {
-    padding: 12px 25px;
+    padding: 10px 20px;
     color: var(--text-color);
     text-decoration: none;
     font-weight: 600;
@@ -117,6 +117,22 @@ body {
     margin-bottom: 15px;
 }
 
+#ver-todas{
+    text-align: center;
+    background-color: var(--primary-color);
+    border-radius: 0.6rem;
+    font-size: 1.2rem;
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+    min-width: 30%;
+    transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
+    width: 2rem;
+}
+#ver-todas:hover{
+    transform: scale(1.05);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+}
 /* ENTRADAS (CHISMES) */
 .entrada-container {
     background: white;
@@ -135,13 +151,14 @@ body {
 /* BARRA LATERAL */
 #sidebar {
     width: 100%;
+    height: 100%;
     background-color: white;
     padding: 25px;
     border-radius: 12px;
     box-shadow: var(--shadow);
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 24px;
     align-items: center;
 }
 
@@ -271,6 +288,18 @@ input[type="submit"]:hover, .boton:hover {
     background-color: var(--secondary-color);
     transform: scale(1.05);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.ver-todass{
+    text-align: center;
+    margin-top: 20px;
+    text-decoration: none;
+    color: white;
+    background-color: var(--primary-color);
+    padding: 1rem;
+    border-radius: 0.6rem;
+    font-size: 1.2rem;
+
 }
 /* RESPONSIVE */
 @media (max-width: 768px) {
